--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,12 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 		target_link_libraries(curl-phony INTERFACE libcurl)
 	endif()
 else()
-	target_link_libraries(curl-phony INTERFACE curl)
+	target_link_directories(curl-phony INTERFACE lib/linux)
+	add_definitions("-DCURL_STATICLIB")
+
+	if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x64")
+		target_link_libraries(curl-phony INTERFACE curl-x64 ssl-x64 crypto-x64)
+	else()
+		target_link_libraries(curl-phony INTERFACE curl ssl crypto)
+	endif()
 endif()
